Align form correctly

--- a/styles.css
+++ b/styles.css
@@ -95,8 +95,8 @@ img[alt="Odin-logo"] {
 
 .fieldset {
     display: grid;
-    grid-template-columns: repeat(2,);
-    grid-template-rows: repeat(3, );
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
 
 input {
